--- a/app/assets/stylesheets/components/_home-cards.scss
+++ b/app/assets/stylesheets/components/_home-cards.scss
@@ -1,6 +1,7 @@
 // _home-cards.scss
 .home-card {
   // width: 30%;
+  height: 350px;
   margin-top: 40px;
   margin-bottom: 40px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
@@ -8,9 +9,9 @@
   overflow: hidden;
 
   img {
-  height: 350px;
-  width: 100%;
-  // background-size: cover;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
   }
 }
 
@@ -18,6 +19,7 @@
   // padding: 20px;
   margin-left: 20px;
   margin-top: 10px;
+  background-color: #FFFFFF;
 }
 
 .home-card-container {
